// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Custom Links fetches all custom links 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [],
      },
    },
  },
  "index": "myIndex",
  "size": 500,
}
`;

exports[`List Custom Links filters custom links 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "service.name": Object {
                      "operator": "and",
                      "query": "foo",
                    },
                  },
                },
                Object {
                  "bool": Object {
                    "must_not": Array [
                      Object {
                        "exists": Object {
                          "field": "service.name",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "transaction.name": Object {
                      "operator": "and",
                      "query": "bar",
                    },
                  },
                },
                Object {
                  "bool": Object {
                    "must_not": Array [
                      Object {
                        "exists": Object {
                          "field": "transaction.name",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 500,
}
`;
